--- a/Thesis/Latex/Biblio.bib
+++ b/Thesis/Latex/Biblio.bib
@@ -1,4 +1,39 @@
 %% Saved with string encoding Unicode (UTF-8) 
+@inproceedings{inproceedings,
+	author = {Hamouda Sidhoum, Abdellah and M’hamed, Mataoui and Faouzi, Sebbak and Aymen, Ouazene and Fedoua, Hussine and Mohamed Chakib, Amrani and Takieddine, Boumediri},
+	year = {2024},
+	month = {09},
+	pages = {1-7},
+	title = {Transforming Legal Documents into Knowledge Goldmines: Application on the Algerian Official Journal},
+	doi = {10.1109/AICT61888.2024.10740457}
+}
+@InProceedings{Information_Retrieval ,
+	author="Mezghanni, Imen Bouaziz
+	and Gargouri, Faiez",
+	editor="Booth, Richard
+	and Zhang, Min-Ling",
+	title="Information Retrieval from Unstructured Arabic Legal Data",
+	booktitle="PRICAI 2016: Trends in Artificial Intelligence",
+	year="2016",
+	publisher="Springer International Publishing",
+	address="Cham",
+	pages="44--54",}
+@misc{Naveed2024,
+	title={A Comprehensive Overview of Large Language Models}, 
+	author={Humza Naveed and Asad Ullah Khan and Shi Qiu and Muhammad Saqib and Saeed Anwar and Muhammad Usman and Naveed Akhtar and Nick Barnes and Ajmal Mian},
+	year={2024},
+	eprint={2307.06435},
+	archivePrefix={arXiv},
+	primaryClass={cs.CL},
+	note={\url{https://arxiv.org/abs/2307.06435}}, 
+}
+@article{lewis2020retrieval,
+title={Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks},
+author={Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra   
+and Petroni, Fabio and Karpukhin, Vladimir and Goyal, Naman and Küttler, Heinrich and Lewis, Mike and Yih, Wen-tau and Rocktäschel, Tim and Riedel, Sebastian and Kiela, Douwe},   
+journal={arXiv preprint arXiv:2005.11401},
+year={2021},
+}
 @manual{murugan2024nlp,
 	title = {Natural Language Processing (NLP)},
 	author = {Mohana Murugan},
@@ -132,15 +167,7 @@ url={https://arxiv.org/abs/2308.16149},
 	note      = {\url{https://pareto.ai/blog/retrieval-augmented-generation}},
 	note      = {Accessed: 2025-03-05},
 }
-@misc{Naveed2024,
- title={A Comprehensive Overview of Large Language Models}, 
-author={Humza Naveed and Asad Ullah Khan and Shi Qiu and Muhammad Saqib and Saeed Anwar and Muhammad Usman and Naveed Akhtar and Nick Barnes and Ajmal Mian},
-year={2024},
-eprint={2307.06435},
-archivePrefix={arXiv},
-primaryClass={cs.CL},
-note={\url{https://arxiv.org/abs/2307.06435}}, 
-}
+
 @article{yenduri2023gpt,
 	author = {Yenduri, Gokul and Ramalingam, M and Selvi, Chemmalar G and Supriya, Y and Srivastava, Gautam and Maddikunta, Praveen Kumar Reddy and Raj, Deepti and Jhaveri, Rutvij H and Prabadevi, B and Wang, Weizheng and Vasilakos, Athanasios V and Gadekallu, Thippa Reddy},
 	title = {GPT (Generative Pre-trained Transformer) – A Comprehensive Review on Enabling Technologies, Potential Applications, Emerging Challenges, and Future Directions},
@@ -231,13 +258,7 @@ note={\url{https://arxiv.org/abs/2307.06435}},
 	year={2020}   
 	
 }
-@article{lewis2020retrieval,
-	title={Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks},
-	author={Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra   
-	and Petroni, Fabio and Karpukhin, Vladimir and Goyal, Naman and Küttler, Heinrich and Lewis, Mike and Yih, Wen-tau and Rocktäschel, Tim and Riedel, Sebastian and Kiela, Douwe},   
-	journal={arXiv preprint arXiv:2005.11401},
-	year={2021},
-}
+
 @article{mombaerts2024meta,
 	title={Meta Knowledge for Retrieval Augmented Large Language Models},
 	author={Mombaerts, Laurent and Ding, Terry and Felice, Florian and Taws, Jonathan and Banerjee, Adi and Borogovac, Tarik},
